--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "^2.2.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.2.17",
+    "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
